--- a/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -54,6 +54,10 @@
                 <behavior>Edit</behavior>
                 <field>FullRecalculationDefaultStringValue__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CalcItemWhereClause__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
