Ensure query fields are added when getting records for a full recalculation

--- a/rollup/main/default/layouts/RollupLimit__mdt-Rollup Limit Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/RollupLimit__mdt-Rollup Limit Layout.layout-meta.xml
@@ -42,6 +42,10 @@
                 <behavior>Edit</behavior>
                 <field>TriggerOrInvocableName__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ShouldRunAsSyncOperation__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
