--- a/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -56,6 +56,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>IsFullRecordSet__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>CalcItemWhereClause__c</field>
             </layoutItems>
         </layoutColumns>
