--- a/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -16,18 +16,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Rollup__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>ShouldRunAsQueueable__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>ShouldRunAsBatchable__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>MaxLookupRowsBeforeBatching__c</field>
             </layoutItems>
             <layoutItems>
@@ -40,11 +28,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>TriggerOrInvocableName__c</field>
+                <field>ShouldRunAs__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>ShouldRunAsSyncOperation__c</field>
+                <field>TriggerOrInvocableName__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
