Code review feedback from @jongpie:
* added All Rollups list view for `Rollup__mdt`
* added help text for `RollupControl__mdt.TriggerOrInvocableName__c`
* fixed bug in `RollupEvaluator` with multi-select picklists
* removed duplicated field in `Rollup__mdt` page layout and added sensible sections
* added the related list of `Rollup__mdt` records on the `RollupControl__mdt` page layout

--- a/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -27,7 +27,7 @@
                 <field>ShouldAbortRun__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>ShouldRunAs__c</field>
             </layoutItems>
             <layoutItems>
@@ -67,15 +67,35 @@
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
     <layoutSections>
-        <customLabel>false</customLabel>
+        <customLabel>true</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <label>Custom Links</label>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>MasterLabel</fields>
+        <fields>DeveloperName</fields>
+        <fields>RollupFieldOnCalcItem__c</fields>
+        <fields>LookupFieldOnCalcItem__c</fields>
+        <fields>LookupFieldOnLookupObject__c</fields>
+        <fields>RollupFieldOnLookupObject__c</fields>
+        <fields>RollupOperation__c</fields>
+        <fields>LookupObject__c</fields>
+        <relatedList>Rollup__mdt.RollupControl__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
+    <summaryLayout>
+        <masterLabel>00h6g0000087NiD</masterLabel>
+        <sizeX>4</sizeX>
+        <sizeY>0</sizeY>
+        <summaryLayoutStyle>Default</summaryLayoutStyle>
+    </summaryLayout>
 </Layout>
