Actually including updated Rollup__mdt layout this time, added CalcItem__c to related list on RollupControl__mdt

--- a/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -79,6 +79,7 @@
     <relatedLists>
         <fields>MasterLabel</fields>
         <fields>DeveloperName</fields>
+        <fields>CalcItem__c</fields>
         <fields>RollupFieldOnCalcItem__c</fields>
         <fields>LookupFieldOnCalcItem__c</fields>
         <fields>LookupFieldOnLookupObject__c</fields>
