--- a/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -16,18 +16,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Rollup__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>ShouldRunAsQueueable__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>ShouldRunAsBatchable__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>MaxLookupRowsBeforeBatching__c</field>
             </layoutItems>
             <layoutItems>
@@ -39,12 +27,12 @@
                 <field>ShouldAbortRun__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>TriggerOrInvocableName__c</field>
+                <behavior>Required</behavior>
+                <field>ShouldRunAs__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>ShouldRunAsSyncOperation__c</field>
+                <field>TriggerOrInvocableName__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -79,15 +67,36 @@
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
     <layoutSections>
-        <customLabel>false</customLabel>
+        <customLabel>true</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <label>Custom Links</label>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>MasterLabel</fields>
+        <fields>DeveloperName</fields>
+        <fields>CalcItem__c</fields>
+        <fields>RollupFieldOnCalcItem__c</fields>
+        <fields>LookupFieldOnCalcItem__c</fields>
+        <fields>LookupFieldOnLookupObject__c</fields>
+        <fields>RollupFieldOnLookupObject__c</fields>
+        <fields>RollupOperation__c</fields>
+        <fields>LookupObject__c</fields>
+        <relatedList>Rollup__mdt.RollupControl__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
+    <summaryLayout>
+        <masterLabel>00h6g0000087NiD</masterLabel>
+        <sizeX>4</sizeX>
+        <sizeY>0</sizeY>
+        <summaryLayoutStyle>Default</summaryLayoutStyle>
+    </summaryLayout>
 </Layout>
