WIP: created new field on Rollup__mdt, OrderByFirstLast__c, and started working toward using that in a new RollupCalculator. Broke Rollup calculators out into their own class and started refactoring toward a better testing future

--- a/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -83,6 +83,10 @@
                 <behavior>Edit</behavior>
                 <field>IsFullRecordSet__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>OrderByFirstLast__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
