--- a/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -36,6 +36,10 @@
                 <behavior>Edit</behavior>
                 <field>MaxLookupRowsForQueueable__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>BatchChunkSize__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
