--- a/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -29,6 +29,10 @@
                 <behavior>Required</behavior>
                 <field>LookupObject__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsRollupStartedFromParent__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
