Started wiring up Rollup to RollupRelationshipFieldFinder, added Rollup__mdt.GrandparentRelationshipFieldPath__c

--- a/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/main/default/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -56,6 +56,10 @@
                 <behavior>Required</behavior>
                 <field>CalcItem__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>GrandparentRelationshipFieldPath__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -155,7 +159,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h6g000007qgMp</masterLabel>
+        <masterLabel>00h54000003XXMf</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>2</sizeY>
         <summaryLayoutItems>
