Fixes #2 by adding custom concat delimiter option to Rollup__mdt

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -56,10 +56,6 @@
                 <behavior>Required</behavior>
                 <field>CalcItem__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>GrandparentRelationshipFieldPath__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -95,6 +91,10 @@
                 <behavior>Edit</behavior>
                 <field>OrderByFirstLast__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>GrandparentRelationshipFieldPath__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -112,6 +112,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>FullRecalculationDefaultStringValue__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ConcatDelimiter__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -159,7 +163,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h54000003XXMf</masterLabel>
+        <masterLabel>00h6g000007qgMp</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>2</sizeY>
         <summaryLayoutItems>
