--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -91,10 +91,6 @@
                 <behavior>Edit</behavior>
                 <field>OrderByFirstLast__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>GrandparentRelationshipFieldPath__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -112,6 +108,29 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>FullRecalculationDefaultStringValue__c</field>
+            </layoutItems>
+        </layoutColumns>
+        <style>TwoColumnsLeftToRight</style>
+    </layoutSections>
+    <layoutSections>
+        <customLabel>true</customLabel>
+        <detailHeading>true</detailHeading>
+        <editHeading>true</editHeading>
+        <label>Advanced Options</label>
+        <layoutColumns>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>RollupToUltimateParent__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>GrandparentRelationshipFieldPath__c</field>
+            </layoutItems>
+        </layoutColumns>
+        <layoutColumns>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>UltimateParentLookup__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
