Updated MaxQueryRows__c on RollupControl__mdt to MaxNumberOfQueries__c, which is what it was actually being used for. Added test for bugfix for full recalculation not properly resetting values when batching.

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -51,7 +51,7 @@
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>MaxQueryRows__c</field>
+                <field>MaxNumberOfQueries__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
