Start of fix for #68 - begin to flesh out Rollup Logger plugin, with beginning options for Nebula Logger and simple logging framework

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -20,7 +20,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>IsMergeReparentingEnabled__c</field>
+                <field>IsRollupLoggingEnabled__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -34,7 +34,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>IsRollupLoggingEnabled__c</field>
+                <field>IsMergeReparentingEnabled__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>RollupLoggerName__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
