--- a/plugins/CustomObjectRollupLogger/layouts/RollupLogEntry__c-Rollup Log Entry Layout.layout-meta.xml
+++ b/plugins/CustomObjectRollupLogger/layouts/RollupLogEntry__c-Rollup Log Entry Layout.layout-meta.xml
@@ -21,6 +21,10 @@
                 <behavior>Required</behavior>
                 <field>LoggingLevel__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>LogRetentionDate__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
