Updating Rollup Custom Logger to include Error Would Have Been Thrown custom field

--- a/plugins/CustomObjectRollupLogger/layouts/RollupLog__c-Rollup Log Layout.layout-meta.xml
+++ b/plugins/CustomObjectRollupLogger/layouts/RollupLog__c-Rollup Log Layout.layout-meta.xml
@@ -21,6 +21,10 @@
                 <behavior>Readonly</behavior>
                 <field>NumberOfLogEntries__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ErrorWouldHaveBeenThrown__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -43,6 +47,10 @@
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>LastModifiedById</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>TransactionId__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
