Initial commit with fix for #152 by introduction of Rollup Callback plugin - deprecating RollupLoggerPlugin__mdt and RollupLoggerPluginParameter__mdt, as those were always supposed to have been RollupPlugin__mdt and RollupPluginParameter__mdt

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -110,7 +110,7 @@
     <relatedLists>
         <fields>MasterLabel</fields>
         <fields>DeveloperName</fields>
-        <relatedList>RollupLoggerPlugin__mdt.RollupControl__c</relatedList>
+        <relatedList>RollupPlugin__mdt.RollupControl__c</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>MasterLabel</fields>
