--- a/rollup/core/layouts/RollupPlugin__mdt-Rollup Plugin Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupPlugin__mdt-Rollup Plugin Layout.layout-meta.xml
@@ -65,7 +65,7 @@
         <fields>DeveloperName</fields>
         <fields>Value__c</fields>
         <fields>Description__c</fields>
-        <relatedList>RollupLoggerPluginParameter__mdt.RollupLoggerPlugin__c</relatedList>
+        <relatedList>RollupPluginParameter__mdt.RollupPlugin__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
