Fixes #173 with the addition of RollupCalcItemReplacer - removes some synchronous code from Rollup.cls that was previously replacing calc items in-situ when they had polymorphic where clauses, in favor of delegating when the replacement is made to the RollupCalcItemReplacer. Added RollupControl__mdt.ReplaceCalcItemsAsyncWhenOverCount__c, which is checked by the RollupCalcItemReplacer when considering whether to run sync or async

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -67,6 +67,10 @@
                 <behavior>Edit</behavior>
                 <field>BatchChunkSize__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ReplaceCalcItemsAsyncWhenOverCount__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
