Fixes #194 by adding the ability to split on the calc items' values when using CONCAT_DISTINCT

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -136,6 +136,10 @@
                 <behavior>Edit</behavior>
                 <field>ConcatDelimiter__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>SplitConcatDelimiterOnCalcItem__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
