Initial commit with @rygramer failing test (and fix for that) to truly address #179. Optimized some RollupAsyncProcessor code paths, with more optimization to come. Still need to fix CustomMetadataDrivenTests.shouldRunCorrectlyForGrandparentReparenting

--- a/extra-tests/layouts/RollupParent__c-Rollup Parent Layout.layout-meta.xml
+++ b/extra-tests/layouts/RollupParent__c-Rollup Parent Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Edit</behavior>
                 <field>NumberField__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>RollupGrandparent__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -64,4 +68,10 @@
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
+    <summaryLayout>
+        <masterLabel>00h6g0000087d3G</masterLabel>
+        <sizeX>4</sizeX>
+        <sizeY>0</sizeY>
+        <summaryLayoutStyle>Default</summaryLayoutStyle>
+    </summaryLayout>
 </Layout>
