Fixes #287 by adding junction object support in conjunction with grandparent rollups

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -126,6 +126,10 @@
                 <behavior>Edit</behavior>
                 <field>GrandparentRelationshipFieldPath__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>OneToManyGrandparentFields__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
