Making order by field readonly on Rollup__mdt since it's been deprecated for a while now

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -185,7 +185,7 @@
         <label>Deprecated</label>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>OrderByFirstLast__c</field>
             </layoutItems>
         </layoutColumns>
