Added RollupControl__mdt.IsDevEdOrTrialOrg__c flag to control when Queueable chaining needs to be halted

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>IsRollupLoggingEnabled__c</field>
             </layoutItems>
+          <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsDevEdOrTrialOrg__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
