Updating high-level logs created throughout Apex Rollup to use LoggingLevel.INFO, allowing you to filter our the individual parent-record values if necessary

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -87,6 +87,10 @@
                 <behavior>Edit</behavior>
                 <field>ReplaceCalcItemsAsyncWhenOverCount__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ShouldSkipResettingParentFields__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
