Fixing layout issue

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -136,7 +136,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>SharingLevel__c</field>
+                <field>SharingMode__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
