Adding initial group by rollup functionality

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -140,7 +140,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>GroupByDelimiter__c</field>
+                <field>GroupByRowDelimiter__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
