Layout tab direction for custom metadata records
I should have checked other layouts - updating these as well to tab according to Salesforce standards of the `Name` field being immediately after the `Label` field for name refreshing on changed label

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -49,7 +49,7 @@
                 <field>IsMergeReparentingEnabled__c</field>
             </layoutItems>
         </layoutColumns>
-        <style>TwoColumnsTopToBottom</style>
+        <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
         <customLabel>true</customLabel>
