Update RollupPlugin__mdt-Rollup Plugin Layout.layout-meta.xml

--- a/rollup/core/layouts/RollupPlugin__mdt-Rollup Plugin Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupPlugin__mdt-Rollup Plugin Layout.layout-meta.xml
@@ -21,7 +21,7 @@
                 <field>DeveloperName</field>
             </layoutItems>
         </layoutColumns>
-        <style>TwoColumnsTopToBottom</style>
+        <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
         <customLabel>false</customLabel>
