Update RollupPluginParameter__mdt-Rollup Plugin Parameter Layout.layout-meta.xml

--- a/rollup/core/layouts/RollupPluginParameter__mdt-Rollup Plugin Parameter Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupPluginParameter__mdt-Rollup Plugin Parameter Layout.layout-meta.xml
@@ -29,7 +29,7 @@
                 <field>Description__c</field>
             </layoutItems>
         </layoutColumns>
-        <style>TwoColumnsTopToBottom</style>
+        <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
         <customLabel>false</customLabel>
