Update RollupOrderBy__mdt-Rollup Order By Layout.layout-meta.xml

--- a/rollup/core/layouts/RollupOrderBy__mdt-Rollup Order By Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupOrderBy__mdt-Rollup Order By Layout.layout-meta.xml
@@ -29,7 +29,7 @@
                 <field>Ranking__c</field>
             </layoutItems>
         </layoutColumns>
-        <style>TwoColumnsTopToBottom</style>
+        <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
         <customLabel>true</customLabel>
